added endpoint to validate tokens
