# docs/swagger.yaml
@@ -11,7 +11,7 @@ definitions:
       title:
         type: string
     type: object
-  handler.HealthResponse:
+  handler.StatusResponse:
     properties:
       status:
         type: string
@@ -447,6 +447,29 @@ paths:
       summary: Refresh token
       tags:
       - token
+  /api/token/validate:
+    get:
+      description: Checks if token supplied in the header is valid
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.StatusResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Validate token
+      tags:
+      - token
   /healthz:
     get:
       description: Get service health status
@@ -457,7 +480,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/handler.HealthResponse'
+              $ref: '#/definitions/handler.StatusResponse'
             type: array
         "500":
           description: Internal Server Error
