# internal/handler/api.go
@@ -28,26 +28,26 @@ func New(r *repository.Queries, secret []byte, expiration time.Duration) *Handle
 	}
 }
 
-// RefreshToken godoc
-// @Summary Refresh token
-// @Description Refreshes a valid, non-expired token
+// ValidateToken godoc
+// @Summary Validate token
+// @Description Checks if token supplied in the header is valid
 // @Tags token
 // @Produce json
 // @Security BearerAuth
-// @Success 200 {object} TokenResponse
+// @Success 200 {object} StatusResponse
 // @Failure 401 {object} string
 // @Failure 500 {object} string
-// @Router /api/token/refresh [get]
-func (h *Handler) RefreshToken(w http.ResponseWriter, r *http.Request) {
+// @Router /api/token/validate [get]
+func (h *Handler) ValidateToken(w http.ResponseWriter, r *http.Request) {
 	authHeader := r.Header.Get("Authorization")
 	if authHeader == "" {
-		http.Error(w, "Authorization header missing", http.StatusUnauthorized)
+		http.Error(w, "authorization header missing", http.StatusUnauthorized)
 		return
 	}
 
 	tokenString := strings.TrimPrefix(authHeader, auth.BearerPrefix)
 	if tokenString == authHeader {
-		http.Error(w, "Invalid authorization header format", http.StatusUnauthorized)
+		http.Error(w, "invalid authorization header format", http.StatusUnauthorized)
 		return
 	}
 
@@ -63,34 +63,100 @@ func (h *Handler) RefreshToken(w http.ResponseWriter, r *http.Request) {
 		// Check if the error is due to token expiration
 		if ve, ok := err.(*jwt.ValidationError); ok {
 			if ve.Errors&jwt.ValidationErrorExpired != 0 {
-				http.Error(w, "Token has expired", http.StatusUnauthorized)
+				http.Error(w, "token has expired", http.StatusUnauthorized)
 				return
 			}
 			if ve.Errors&jwt.ValidationErrorNotValidYet != 0 {
-				http.Error(w, "Token not valid yet", http.StatusUnauthorized)
+				http.Error(w, "token not valid yet", http.StatusUnauthorized)
 				return
 			}
 		}
-		http.Error(w, "Invalid token", http.StatusUnauthorized)
+		http.Error(w, "invalid token", http.StatusUnauthorized)
 		return
 	}
 
 	claims, ok := token.Claims.(*auth.Claims)
 	if !ok || claims.Issuer != auth.Issuer || !token.Valid {
-		http.Error(w, "Invalid token claims", http.StatusUnauthorized)
+		http.Error(w, "invalid token claims", http.StatusUnauthorized)
 		return
 	}
 
 	// Explicitly check token expiration
 	if claims.ExpiresAt == nil || time.Until(claims.ExpiresAt.Time) <= 0 {
-		http.Error(w, "Token has expired", http.StatusUnauthorized)
+		http.Error(w, "token has expired", http.StatusUnauthorized)
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	if err := json.NewEncoder(w).Encode(ValidTokenResponse); err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+}
+
+// RefreshToken godoc
+// @Summary Refresh token
+// @Description Refreshes a valid, non-expired token
+// @Tags token
+// @Produce json
+// @Security BearerAuth
+// @Success 200 {object} TokenResponse
+// @Failure 401 {object} string
+// @Failure 500 {object} string
+// @Router /api/token/refresh [get]
+func (h *Handler) RefreshToken(w http.ResponseWriter, r *http.Request) {
+	authHeader := r.Header.Get("Authorization")
+	if authHeader == "" {
+		http.Error(w, "authorization header missing", http.StatusUnauthorized)
+		return
+	}
+
+	tokenString := strings.TrimPrefix(authHeader, auth.BearerPrefix)
+	if tokenString == authHeader {
+		http.Error(w, "invalid authorization header format", http.StatusUnauthorized)
+		return
+	}
+
+	// Parse and validate the token
+	token, err := jwt.ParseWithClaims(tokenString, &auth.Claims{}, func(token *jwt.Token) (interface{}, error) {
+		// Ensure the signing method is HMAC and specifically HS256
+		if _, ok := token.Method.(*jwt.SigningMethodHMAC); !ok || token.Method.Alg() != jwt.SigningMethodHS256.Alg() {
+			return nil, errors.New("unexpected signing method")
+		}
+		return h.Secret, nil
+	})
+	if err != nil {
+		// Check if the error is due to token expiration
+		if ve, ok := err.(*jwt.ValidationError); ok {
+			if ve.Errors&jwt.ValidationErrorExpired != 0 {
+				http.Error(w, "token has expired", http.StatusUnauthorized)
+				return
+			}
+			if ve.Errors&jwt.ValidationErrorNotValidYet != 0 {
+				http.Error(w, "token not valid yet", http.StatusUnauthorized)
+				return
+			}
+		}
+		http.Error(w, "invalid token", http.StatusUnauthorized)
+		return
+	}
+
+	claims, ok := token.Claims.(*auth.Claims)
+	if !ok || claims.Issuer != auth.Issuer || !token.Valid {
+		http.Error(w, "invalid token claims", http.StatusUnauthorized)
+		return
+	}
+
+	// Explicitly check token expiration
+	if claims.ExpiresAt == nil || time.Until(claims.ExpiresAt.Time) <= 0 {
+		http.Error(w, "token has expired", http.StatusUnauthorized)
 		return
 	}
 
 	// Generate a new token
 	newToken, err := auth.GenerateToken(h.Secret, h.Expiration)
 	if err != nil {
-		http.Error(w, "Could not generate token", http.StatusInternalServerError)
+		http.Error(w, "could not generate token", http.StatusInternalServerError)
 		return
 	}
 
